# grpc_stream_killer

./: .gitignore  CMakeLists.txt  README.md
extlibs/includes/boost/log/detail/: attachable_sstream_buf.hpp
extlibs/includes/boost/process/detail/windows/: async_out.hpp
extlibs/includes/boost/type_traits/detail/: bool_trait_def.hpp  template_arity_spec.hpp
extlibs/includes/google/protobuf/: api.pb.h  type.pb.h
extlibs/includes/google/protobuf/compiler/: plugin.pb.h
extlibs/includes/grpc++/impl/codegen/: exception_callback.h  method_handler_impl.h
extlibs/includes/openssl/: opensslconf.h
extlibs/lib/: boost_atomic-vc140-mt-1_65_1.lib  boost_atomic-vc140-mt-gd-1_65_1.lib  boost_chrono-vc140-mt-1_65_1.lib  boost_chrono-vc140-mt-gd-1_65_1.lib  boost_container-vc140-mt-1_65_1.lib  boost_container-vc140-mt-gd-1_65_1.lib  boost_context-vc140-mt-1_65_1.lib  boost_context-vc140-mt-gd-1_65_1.lib  boost_coroutine-vc140-mt-1_65_1.lib  boost_coroutine-vc140-mt-gd-1_65_1.lib  boost_date_time-vc140-mt-1_65_1.lib  boost_date_time-vc140-mt-gd-1_65_1.lib  boost_fiber-vc140-mt-1_65_1.lib  boost_fiber-vc140-mt-gd-1_65_1.lib  boost_filesystem-vc140-mt-1_65_1.lib  boost_filesystem-vc140-mt-gd-1_65_1.lib  boost_graph-vc140-mt-1_65_1.lib  boost_graph-vc140-mt-gd-1_65_1.lib  boost_iostreams-vc140-mt-1_65_1.lib  boost_iostreams-vc140-mt-gd-1_65_1.lib  boost_locale-vc140-mt-1_65_1.lib  boost_locale-vc140-mt-gd-1_65_1.lib  boost_log-vc140-mt-1_65_1.lib  boost_log-vc140-mt-gd-1_65_1.lib  boost_log_setup-vc140-mt-1_65_1.lib  boost_log_setup-vc140-mt-gd-1_65_1.lib  boost_math_c99-vc140-mt-1_65_1.lib  boost_math_c99-vc140-mt-gd-1_65_1.lib  boost_math_c99f-vc140-mt-1_65_1.lib  boost_math_c99f-vc140-mt-gd-1_65_1.lib  boost_math_c99l-vc140-mt-1_65_1.lib  boost_math_c99l-vc140-mt-gd-1_65_1.lib  boost_math_tr1-vc140-mt-1_65_1.lib  boost_math_tr1-vc140-mt-gd-1_65_1.lib  boost_math_tr1f-vc140-mt-1_65_1.lib  boost_math_tr1f-vc140-mt-gd-1_65_1.lib  boost_math_tr1l-vc140-mt-1_65_1.lib  boost_math_tr1l-vc140-mt-gd-1_65_1.lib  boost_prg_exec_monitor-vc140-mt-1_65_1.lib  boost_prg_exec_monitor-vc140-mt-gd-1_65_1.lib  (+48 more)
protos/: crashing_this_plane.proto
src/client/: CMakeLists.txt  client.cpp
src/grpc_lib/: CMakeLists.txt
src/jsclient/: call.js  crashing_this_plane_pb.js  crashing_this_plane_pb_service.js  package-lock.json  package.json  stream.js
src/pyclient/: call.py  crashing_this_plane_pb2.py  crashing_this_plane_pb2_grpc.py  server.py  stream.py
src/server/: CMakeLists.txt  server.cpp
